--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,17 @@
     </header>
     <section class="main">
         <div class="your-grid">
-            <div class="grid your">
+            <table class="grid your">
                 
-            </div>
+            </table>
             <div class="grid-info">Your Grid</div>
 
         </div>
         <button class="play">Play</button>
         <div class="opponent-grid">
-            <div class="grid opponent">
+            <table class="grid opponent">
 
-            </div>
+            </table>
             <div class="grid-info">Opponent's Grid</div>
         </div>
     </section>
