make the UI more polished

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <div class="title">Battleship</div>
-        <div class="instruction-bar"></div>
+        <div class="instruction-bar">Place the ships.</div>
 
         <div class="mode-buttons">
             <div class="against-computer mode-select" id = "computer-button">vs Computer</div>
